[gd_scene load_steps=31 format=2]

[ext_resource path="res://Assets/Characters/Eggbert/Right eye/EggbertRE-1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Characters/Eggbert/Right eye/EggbertRE-4.png" type="Texture" id=2]
[ext_resource path="res://Assets/Characters/Eggbert/Right eye/EggbertRE-3.png" type="Texture" id=3]
[ext_resource path="res://Assets/Characters/Eggbert/Right eye/EggbertRE-2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Characters/Eggbert/Left eye/EggbertLE-1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Characters/Eggbert/Eggbert-1.png" type="Texture" id=6]
[ext_resource path="res://Scenes/Characters/eggbert_sprites.gd" type="Script" id=7]
[ext_resource path="res://Assets/Characters/Eggbert/Eggbert-6.png" type="Texture" id=8]
[ext_resource path="res://Assets/Characters/Eggbert/Right eye/EggbertRE-5.png" type="Texture" id=9]
[ext_resource path="res://Assets/Characters/Eggbert/Eggbert-5.png" type="Texture" id=10]
[ext_resource path="res://Assets/Characters/Eggbert/Left eye/EggbertLE-3.png" type="Texture" id=11]
[ext_resource path="res://Assets/Characters/Eggbert/Left eye/EggbertLE-4.png" type="Texture" id=12]
[ext_resource path="res://Assets/Characters/Eggbert/Left eye/EggbertLE-5.png" type="Texture" id=13]
[ext_resource path="res://Assets/Characters/Eggbert/Right eye/EggbertRE-6.png" type="Texture" id=14]
[ext_resource path="res://Assets/Characters/Eggbert/Eggbert-3.png" type="Texture" id=15]
[ext_resource path="res://Assets/Characters/Eggbert/Left eye/EggbertLE-2.png" type="Texture" id=16]
[ext_resource path="res://Assets/Characters/Eggbert/Eggbert-2.png" type="Texture" id=17]
[ext_resource path="res://Assets/Characters/Eggbert/Eggbert-4.png" type="Texture" id=18]
[ext_resource path="res://Assets/Characters/Eggbert/Left eye/EggbertLE-6.png" type="Texture" id=19]
[ext_resource path="res://Scenes/Characters/eggbert.gd" type="Script" id=20]
[ext_resource path="res://Scenes/Characters/eggbert_Camera2D.gd" type="Script" id=21]

[sub_resource type="Animation" id=16]
resource_name = "death"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"

[sub_resource type="Animation" id=6]
resource_name = "fall"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "flap"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprites/Body:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 17 ), ExtResource( 15 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 8 ) ],
"loop": true,
"name": "frames",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 16 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 19 ) ],
"loop": true,
"name": "frames",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 14 ) ],
"loop": true,
"name": "frames",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=7]
radius = 21.0

[sub_resource type="CircleShape2D" id=15]
radius = 23.0217

[node name="Eggbert" type="KinematicBody2D"]
script = ExtResource( 20 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 16 )
anims/default = SubResource( 4 )
anims/fall = SubResource( 6 )
anims/flap = SubResource( 5 )

[node name="Sprites" type="Node2D" parent="."]
scale = Vector2( 0.05, 0.05 )
script = ExtResource( 7 )
blink_chance_separate = 0.1
blink_chance_together = 0.7

[node name="Body" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 1 )
animation = "frames"

[node name="LeftEye" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 2 )
animation = "frames"

[node name="RightEye" type="AnimatedSprite" parent="Sprites"]
frames = SubResource( 3 )
animation = "frames"

[node name="Timer" type="Timer" parent="Sprites"]
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -5.96046e-08, 8 )
scale = Vector2( 1, 1 )
shape = SubResource( 7 )

[node name="Detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2( 0, 8 )
shape = SubResource( 15 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 21 )

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="frame_changed" from="Sprites/Body" to="Sprites" method="_on_Body_frame_changed"]
[connection signal="timeout" from="Sprites/Timer" to="Sprites" method="_on_Timer_timeout"]
